fix: fix sum_if reducer bug and schema update id bug